Fixed overlapped links-footer by adding margin-bottom

--- a/resources/style.css
+++ b/resources/style.css
@@ -711,6 +711,7 @@ a svg {
 .pagefooter {
   height: 40px;
   padding: 0 20px 10px 20px;
+  margin-bottom: 60px;
 }
 
 .pagefooter ul {
